Fixed right content spacing

--- a/src/Kreta/Bundle/WebBundle/Resources/public/scss/layout/_content.scss
+++ b/src/Kreta/Bundle/WebBundle/Resources/public/scss/layout/_content.scss
@@ -57,7 +57,8 @@ $content-transition: .3s;
 
 .content__right-content {
   padding: 40px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   max-width: $content-right-width;
 }
 
